--- a/qualtrics.css
+++ b/qualtrics.css
@@ -1,6 +1,7 @@
 :root {
   --accent-secondary: var(--mixes-primary-1, #b87f00); /* --mixes-primary-1 from qualtrics */
   --color-black: #171818;
+  --background-color: #eeeff1;
   --text-light: #2e3030;
   --font-body-face: var(--font-family, 'Source Serif 4', Times, serif);  /* --font-family from qualtrics */
   --font-size-xs: 0.875rem;
@@ -102,8 +103,8 @@ body.embedded .Skin .QuestionText,
 }
 
 .footer__global-footer a.link-paragraph:hover {
-  background: #f0f3f4;
-  box-shadow: 0 -1px 0 0 var(--accent-secondary) inset;
+  background-color: unset;
+  box-shadow: 0 -1px 0 0 transparent inset;
 }
 
 .footer__global-footer .flex-wrapper {
@@ -119,18 +120,25 @@ body.embedded .Skin .QuestionText,
 .footer__global-footer .flex-wrapper .footer__inner-2 {
   color: var(--title);
   padding: 0;
+  background-color: unset;
 
   @media (min-width: 768px) {
     flex: 1 0 300px;
   }
 }
-.footer__global-footer .footer__copyright {
+
+.footer__global-footer .flex-wrapper .footer__copyright {
   font-family: var(--font-body-face);
   font-size: var(--font-size-xs);
   line-height: var(--line-height-xs);
   font-weight: 400;
   margin: 0;
   color: var(--text-light);
+  margin-block-end: 16px;
+
+  @media (min-width: 64rem) {
+    margin-block-end: 0;
+  }
 }
 
 .footer__global-footer .footer__copyright a {
@@ -149,4 +157,42 @@ div#root {
 
 #page #footer {
   padding-inline: 0;
+}
+
+.plug-container {
+  background-color: var(--background-color);
+  padding: 16px;
+
+  @media (min-width: 64rem) {
+    padding-inline: 0;
+  }
+}
+
+.plug-wrapper {
+  @media (min-width: 64rem) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    inline-size: 64rem;
+    margin-inline: auto;
+  }
+}
+
+.plug-container #plug a {
+  padding-block: 4px;
+  background-color: unset;
+  font-family: var(--font-body-face);
+  font-size: var(--font-size-xs);
+  line-height: var(--line-height-xs);
+  font-weight: 400;
+  color: var(--text-light);
+  box-shadow: 0 -1px 0 0 transparent inset;
+}
+
+.plug-container #plug a:hover svg {
+  fill: var(--palettes-text-1-on-bg, #32363a);
+}
+
+.plug-container #plug a:hover {
+  box-shadow: 0 -1px 0 0 var(--color-black) inset;
 }
