--- a/qualtrics.css
+++ b/qualtrics.css
@@ -1,7 +1,7 @@
 :root {
   --accent-secondary: var(--mixes-primary-1, #b87f00); /* --mixes-primary-1 from qualtrics */
   --color-black: #171818;
-  --background-color: #eeeff1;
+  --bg-light: #eeeff1;
   --text-light: #2e3030;
   --font-body-face: var(--font-family, 'Source Serif 4', Times, serif);  /* --font-family from qualtrics */
   --font-size-xs: 0.875rem;
@@ -160,7 +160,7 @@ div#root {
 }
 
 .plug-container {
-  background-color: var(--background-color);
+  background-color: var(--bg-light);
   padding: 16px;
 
   @media (min-width: 64rem) {
