--- a/qualtrics.css
+++ b/qualtrics.css
@@ -158,6 +158,7 @@ body.embedded .Skin .QuestionText,
 .plug-container {
   background-color: var(--bg-light);
   padding: 16px;
+  margin-top: auto;
 
   @media (min-width: 64rem) {
     padding-inline: 0;
